Added lots of code. Now have a microservice to handle tasks, sending them to MongoDB. The microsevice authenticates requests using JWTs coming from the webapplication. The webapplication has a basic security config.

--- a/exampleweb/src/main/resources/application.properties
+++ b/exampleweb/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=exampleweb
+server.port=8082
+backend.service.url=http://localhost:8080/api
+jwt.secret=your-256-bit-secret-key-for-jwt-token-signing-and-validation
+
+# Debug logging
+logging.level.com.collinsrj.exampleweb=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
