--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         cache: maven
         
     - name: Build with Maven
-      run: ./mvnw -B clean install --file pom.xml
+      run: ./mvnw -B verify
+      env:
+        NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
       
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -30,3 +32,9 @@ jobs:
         name: test-results
         path: |
           **/target/surefire-reports/ 
+
+    - name: Upload OWASP dependency check report
+      uses: actions/upload-artifact@v4
+      with:
+        name: dependency-check-report
+        path: target/dependency-check-report.html
